fixed header's z-index / added animation for index.html advertisements

--- a/assests/css/header-footer.css
+++ b/assests/css/header-footer.css
@@ -143,6 +143,7 @@ header .header-logo img {
     background-color: #1e1f31;
     visibility: hidden;
     opacity: 0;
+    z-index: 2;
 }
 
 .header-main-menu>ul>li:hover>ul {
